<resources>
    <string name="Email">Email</string>
    <string name="app_name">College Conexion</string>
    <string name="home_name">Happenings</string>
    <string name="notice_box_name">NoticeBox</string>
    <string name="academics_name">Academics</string>
    <string name="conexions_name">Conexions</string>
    <string name="talks_name">Talks</string>
    <string name="app_name_line">College\nConexion</string>
    <string name="sign_in_welcome_message">Welcome back,</string>
    <string name="sign_in_welcome_message_tag">we missed you !\nsign in to continue</string>
    <string name="sign_in">Sign in</string>
    <string name="forgotPassword">Need help?</string>
    <string name="new_account">Don\'t have an account?</string>
    <string name="click_here">Click here</string>
    <string name="sign_up_welcome_message">Oh you came!</string>
    <string name="sign_up_welcome_message_tag">We have waited so long!\nto have you with us</string>
    <string name="college_name_hint">College Name</string>
    <string name="user_name_hint">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="old_account">Already have an account?</string>
    <string name="app_terms_msg">By creating an account you agree to our</string>
    <string name="terms">Terms of Use</string>
    <string name="and"> &amp;</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_up_step2_welcome_message">We need your info!</string>
    <string name="sign_up_step2_welcome_message_tag">last step to connect with \nyour college community</string>
    <string name="college_help">Didn\'t find your college?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="letsgo">Let\'s connect</string>
    <string name="profile_name">Profile</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="default_bio">Hi there! I am using CC</string>
    <string name="re_password">Retype Password</string>
    <string name="signIn">Sign In With</string>
    <string name="settings">Settings</string>
    <string name="post">New Post</string>
    <string name="thanks_message">Thanks you for investing your valuable time in giving us feedback.
                            We do use feedback like yours to improve the College Conexion experience for every student.</string>
    <string name="feedback_hint"> 1. Write Feedback.\n 2. Share your suggestions with us to improve ourselves.</string>
    <string name="about_app"> College Conexion and its logos are the trademarks of College Conexion Inc. All Rights reserved</string>
    <string name="account_not_verified"> Report to conex of your college if it took a long time.</string>
    <string name="update_profile_message"> Please, Update your profile to get benefits of all college notices
        and help your colleagues to identify you.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="resources">Resources</string>
    <string name="about">About</string>
    <string name="privacy">Privacy Settings</string>
    <string name="feedback">Help us to improve</string>
    <string name="blockList">Block List</string>
    <string name="college_communities">Join College Communities</string>
    <string name="your_communities">Your Communities</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="acknowledgement">Acknowledgement</string>
    <string name="auth_failed">Failed To Authenticate  Your Account </string>
    <string name="auth_success">Authentication Successful</string>
    <string name="title_activity_scrolling">Tushar Dave</string>
    <string name="action_settings">Settings</string>
    <string name="dbField_email">email</string>
    <string name="dbname_college_profile">college_profile</string>
    <string name="dbname_teacher_profile">teacher_profile</string>
    <string name="dbname_privacy_settings">user_privacy_settings</string>
    <string name="dbname_verified_user">verified_user</string>
    <string name="dbname_pending_user">pending_user</string>
    <string name="dbname_rejected_user">rejected_user</string>
    <string name="dbname_notice_box">notice_box</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_acknowledgement"> College Conexion for Android is built including 3rd party softwares </string>
    <string name="acknowledgement_apache_licence">
        Licensed under the Apache License, Version 2.0 (the \"License\");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at \n\n

    http://www.apache.org/licenses/LICENSE-2.0\n\n

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an \"AS IS\" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.  </string>
    <string name="acknowledgement_mit_licence">

        Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the \"Software\"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:\n\n

    The above copyright notice and this permission notice shall be included in all
    copies or substantial portions of the Software.\n\n

    THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    SOFTWARE.    </string>
    <string name="cc_terms">
        By downloading or using the app, these terms will automatically apply to you.
        You should make sure therefore that you read them carefully before using the app.
        You\'re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way.
        You\'re not allowed to attempt to extract the source code of the app, and you also shouldn\'t try to translate
        the app into other languages,or make derivative versions.
        The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related
        to it, still belong to College Conexion.\n\n
        College Conexion is committed to ensuring that the app is as useful and efficient as possible. For that reason,
        we reserve the right to make changes to the app or to charge for its services, at any time and for any reason.
        We will never charge you for the app or its services without making it very clear to you exactly what you\'re
        paying for.\n\n
        The College Conexion app stores and processes personal data that you have provided to us, in order to provide
        our Service. It\'s your responsibility to keep your phone and access to the app secure. We therefore recommend
        that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations
        imposed by the official operating system of your device. It could make your phone vulnerable to malware or
        viruses or malicious programs,
        compromise your phone\'s security features and it could mean that the College Conexion app won\'t work properly
        or at all.\n\n
        You should be aware that there are certain things that College Conexion will not take responsibility for.
        Certain functions of the app will require the app to have an active internet connection. The connection can
        be Wi-Fi, or provided by your mobile network provider, but College Conexion cannot take responsibility
        for the app not working at full functionality if you don\'t have access to Wi-Fi, and you don\'t have any of
        your data allowance left.\n\n
        If you\'re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement
        with your mobile network provider will still apply. As a result, you may be charged by your mobile provider
        for the cost of data for the duration of the connection while accessing the app, or other third party charges.
        In using the app, you\'re accepting responsibility for any such charges,
        including roaming data charges if you use the app outside of your home territory (i.e. region or country)
        without turning off data roaming. If you are not the bill payer for the device on which you\'re using the app,
        please be aware that we assume that you have received permission from the bill payer for using the app.\n\n
        Along the same lines, College Conexion cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged if it runs out of battery and you can\'t turn it on to avail the Service, College Conexion cannot accept responsibility.\n\n
        With respect to College Conexion\'s responsibility for your use of the app, when you\'re using the app, it\'s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. College Conexion accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.\n\n
        At some point, we may wish to update the app. The app is currently available on Android the requirements for system(and for any additional systems we decide to extend the availability of the app to) may change, and you\'ll need to download the updates if you want to keep using the app. College Conexion does not promise that it will always update the app so that it is relevant to you and or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.
    </string>
    <string name="update_cc_terms">
        We may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Terms and Conditions on this page.
        These changes are effective immediately after they are posted on this page.
    </string>
    <string name="contact_us">
        If you have any questions or suggestions about our Terms and Conditions, do not hesitate to contact us.
    </string>
    <string name="about_cc" translatable="false">
       Welcome to the College Conexion site and/or mobile app, a ressource that helps you to connect with your college community
    </string>
    <string name="drawer_open">open_drawer</string>
    <string name="drawer_close">close_drawer</string>
</resources>