<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home"
        android:title="@string/home_name"
        android:icon="@drawable/ic_home" />
    <item android:id="@+id/noticeBox"
        android:title="@string/notice_box_name"
        android:icon="@drawable/ic_notice_box"/>
    <item android:id="@+id/friends"
    android:title="@string/conexions_name"
    android:icon="@drawable/ic_friends"/>
    <item android:id="@+id/talks"
        android:title="@string/talks_name"
        android:icon="@drawable/ic_talks"/>
    <!--<item android:id="@+id/academics"-->
        <!--android:title="@string/academics_name"-->
        <!--android:icon="@drawable/ic_academic" />-->
    <item android:id="@+id/profile"
        android:title="@string/profile_name"
        android:icon="@drawable/ic_profile" />
</menu>