<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ebrimabd"
            android:gravity="start"
            android:text="@string/app_name_line"
            android:textColor="@color/app_name_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/ebrima"
            android:gravity="start"
            android:text="@string/sign_in_welcome_message"
            android:textColor="@color/Black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/welcomeMsgTagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ebrima"
            android:gravity="start"
            android:text="@string/sign_in_welcome_message_tag"
            android:textColor="@color/new_grey_color"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/ebrima"
                android:gravity="start"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/new_grey_color"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/ebrima"
                android:gravity="start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/new_grey_color"
                android:textSize="18sp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainLayout"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/logInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ebrima"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/app_name_color"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/ebrima"
            android:gravity="end"
            android:text="@string/forgotPassword"
            android:textColor="@color/new_grey_color"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/newAccountLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ebrima"
            android:text="@string/new_account"
            android:textColor="@color/new_grey_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/newAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/ebrimabd"
            android:text="@string/sign_up"
            android:textColor="@color/new_grey_color"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>