<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ebrimabd"
                android:gravity="start"
                android:text="@string/app_name_line"
                android:textColor="@color/app_name_color"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/welcomeMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/ebrima"
                android:gravity="start"
                android:text="@string/sign_up_welcome_message"
                android:textColor="@color/Black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/welcomeMsgTagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ebrima"
                android:gravity="start"
                android:text="@string/sign_up_welcome_message_tag"
                android:textColor="@color/new_grey_color"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/ebrima"
                    android:gravity="start"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColorHint="@color/new_grey_color"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/emailSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/ebrima"
                    android:gravity="start"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/new_grey_color"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/passwordSignUpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/ebrima"
                    android:gravity="start"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/new_grey_color"
                    android:textSize="18sp"
                    />

                <EditText
                    android:id="@+id/nameSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/ebrima"
                    android:gravity="start"
                    android:hint="@string/college_name_hint"
                    android:textColorHint="@color/new_grey_color"
                    android:textSize="18sp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/signUpPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linLayout"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/ebrima"
                android:gravity="start"
                android:text="@string/app_terms_msg"
                android:textColor="@color/new_grey_color"
                android:textSize="14sp" />

            <LinearLayout
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/ebrimabd"
                    android:text="@string/terms"
                    android:textColor="@color/app_name_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/ebrima"
                    android:text="@string/and"
                    android:textColor="@color/new_grey_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/ebrimabd"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/app_name_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ebrima"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/app_name_color"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/signUpPrivacy"
            android:id="@+id/oldAccountLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/ebrima"
                android:text="@string/old_account"
                android:textColor="@color/new_grey_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/oldAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/ebrimabd"
                android:text="@string/sign_in"
                android:textColor="@color/new_grey_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>


</ScrollView>


